--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "name": "ormur",
-  "version": "0.0.0",
+ "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-core/register",
+    "build": "rimraf ./lib && babel src --out-dir lib --copy-files"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "knex": "^0.12.6"
+    "knex": "^0.12.6",
+    "lodash": "^4.16.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2",
+    "rimraf": "^2.5.4"
   }
 }
